[package]
name = "exams-doc-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [ "cookies", "stream" ] }
futures = "0.3.21"
futures-util = "0.3.14"
indicatif = "0.15.0"
dotenv = "0.15.0"
nipper = "0.1.9"
clap = { version = "3.1.7", features = ["derive"] }
